--- a/limtu/contacts.html
+++ b/limtu/contacts.html
@@ -1,98 +1,66 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="style.css">
-<meta charset="utf-8" />
-<title>Контакт</title>
-</head>
-<body>
-<div id="container">
-	<div id="topline">
-		<div class="register"><a href="account.html">Вход/Регистрация</a>
-    	</div>
-    </div>
-	<div id="header">
-        </div>
-    	<div class="breadcrumbs">Контакты</div>
-	</div>
-	<div id="leftcol">
-    <h3>Меню</h3>
-		<ul>
-        	<li><a href="/">Главная</a></li>
-			<li><a href="catalog.html">Каталог</a></li>
-			<li><a href="styles.html">Стили</a></li>
-		</ul>
-    </div>
-	<div id="main">
-    	<div class="topblock">
-        <h1>Контакты</h1>
-        <h3>Наши контакты</h3> 
-    	</div>
-        <div class="mainblock">
-        <form action="#" method="post">
-<fieldset>
-<legend>Форма для связи</legend>
-<div>
-<label for="textField">Имя: </label>
-<input id="textField" type="text"  placeholder="введите имя" required="required"/>
-</div><br />
-<div>
-<label for="email">Email: </label>
-<input id="email" type="text"  placeholder="введите email" required="required"/>
-</div><br />
-<div>
-<label for="text_area">Сообщение: </label>
-<textarea rows="5" id="text_area"  placeholder="Комментарий" /></textarea>
-</div><br />
-<div>
-<input id="" type hidden="" />
-<input type="submit" id="submit" />
-</fieldset>
-    </div>
-    </div>
-	<div id="rightcol">
-    </div>
-	<div id="footer">
-    </div>
-</div>
-</body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<meta charset="utf-8" />
+		<title>Контакты</title>
+	</head>
+	<body>
+		<div id="container">
+			<div id="topline">
+				<div class="register">
+        			<label for="search">Поиск: </label>
+					<input id="search" type="search"  placeholder="введите слова для поиска" />
+        			<a href="account.html">Вход/Регистрация</a>
+    			</div>
+    		</div>
+            <div id="header">
+            </div>
+    		<div class="breadcrumbs">Контакты</div>
+			</div>
+            <div id="leftcol">
+                    <h3>Меню</h3>
+                        <ul>
+                            <li><a href="/">Главная</a></li>
+                            <li><a href="catalog.html">Каталог</a></li>
+                            <li><a href="styles.html">Стили</a></li>
+                            <li><a href="forms.html">Формы</a></li>
+                        </ul>
+                    </div>
+                    <div id="main">
+                        <div class="topblock">
+                        <h1>Контакты</h1>
+                        <h3>Наши контакты</h3> 
+                        </div>
+                        <div class="mainblock">
+                        <form action="#" method="post">
+                <fieldset>
+                    <legend>Форма для связи</legend>
+                    <div>
+                    <label for="text_field">Имя: </label>
+                    <input id="text_field" type="text"  placeholder="введите имя" required />
+                    </div><br />
+                    <div>
+                    <label for="email">Email: </label>
+                    <input id="email" type="text"  placeholder="введите email" required />
+                    </div><br />
+                    <div>
+                    <label for="url">Ссылка: </label>
+                    <input id="url" type="url"  placeholder="введите ссылку" />
+                    </div><br />
+                    <div>
+                    <label for="text_area">Сообщение: </label>
+                    <textarea rows="5" id="text_area"  placeholder="Комментарий" /></textarea>
+                    </div><br />
+                    <div>
+                    <input type="submit" id="submit" />
+                </fieldset>
+                    </div>
+                    </div>
+            <div id="rightcol">
+            </div>
+            <div id="footer">
+            </div>
+		</div>
+	</body>
 </html>
-
-<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" type="text/css" href="style.css">
-<title>Контакты</title>
-</head>
-<body>
-<h1>Контакты</h1>
-<p>Наши контакты</p>
-<h3>Меню</h3>
-<ul>
-<li><a href="index.html">Главная</a></li>
-<li><a href="catalog.html">Каталог</a></li>
-<li><a href="styles.html">Стили</a></li>
-</ul>
-<h1>Формы</h1>
-<form action="#" method="post">
-<fieldset>
-<legend>Текстовые поля</legend>
-<div>
-<label for="textField">Имя: </label>
-<input id="textField" type="text"  placeholder="введите имя" required="required"/>
-</div><br />
-<div>
-<label for="pwd">Пароль: </label>
-<input id="pwd" type="password"  placeholder="введите пароль" required="required"/>
-</div><br />
-<div>
-<label for="text_area">Комментарий: </label>
-<textarea rows="5" id="text_area"  placeholder="Комментарий" /></textarea>
-</div><br />
-<div>
-<input id="" type hidden="" />
-</fieldset>
-</body>
-</html>
--->
