--- a/limtu/account.html
+++ b/limtu/account.html
@@ -8,9 +8,11 @@
 	<body>
 		<div id="container">
 			<div id="topline">
-            	<div class="register">
-        			<label for="search">Поиск: </label>
+        			<div id="search_form">
 					<input id="search" type="search"  placeholder="введите слова для поиска" />
+                    <div class="register">
+        			<a href="account.html">Вход/Регистрация</a>
+                    </div>
     			</div>
     		</div>
             <div id="header">
@@ -32,7 +34,7 @@
             <h3>После регистрации проверьте свой почтовый ящик</h3> 
     	</div>
         	<div class="mainblock">
-                 	<div id="reg-form">
+                 	<div class="reg-form">
                         <form action="#" method="post">
                         <fieldset>
                             <div>
