--- a/limtu/contacts.html
+++ b/limtu/contacts.html
@@ -1,37 +1,61 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<meta charset="utf-8" />
-		<title>Контакты</title>
-	</head>
-	<body>
-		<div id="container">
-			<div id="topline">
-				<div class="register">
-        			<label for="search">Поиск: </label>
-					<input id="search" type="search"  placeholder="введите слова для поиска" />
-        			<a href="account.html">Вход/Регистрация</a>
-    			</div>
-    		</div>
-            <div id="header">
+<head>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta charset="utf-8" />
+	<title>Контакты</title>
+</head>
+<body>
+	<div class="container">
+		<div class="topline row">
+        <div class="logo col-2">
+			<a href="/">Online-List.ru </a>
+        </div>
+			<div class="register col-1 offset-6">
+			<a href="account.html">Вход</a> | 
+           <a ref="account.html">Регистрация</a>
             </div>
-    		<div class="breadcrumbs">Контакты</div>
+            <div class="search_form">
+			<input id="search" type="search"  placeholder="введите слова для поиска" />
 			</div>
-            <div id="leftcol">
-                    <h3>Меню</h3>
-                        <ul>
-                            <li><a href="/">Главная</a></li>
-                            <li><a href="catalog.html">Каталог</a></li>
-                            <li><a href="styles.html">Стили</a></li>
-                            <li><a href="forms.html">Формы</a></li>
-                        </ul>
-                    </div>
-                    <div id="main">
-                        <div class="topblock">
-                        <h1>Контакты</h1>
-                        <h3>Наши контакты</h3> 
-                        </div>
+		</div>
+		<div class="menu col-12 row">
+            <ul class="col-6 offset-3 ">
+            	<li><a href="/">Главная</a></li>
+				<li><a href="catalog.html">Каталог</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+                <li><a href="styles.html">Стили</a></li>
+                <li><a href="forms.html">Формы</a></li>
+            </ul>
+		</div>
+		<div class="header col-12 row">
+        	<div class="row">
+				<div class="col-3 tst-col-head">
+					<div>
+                    <img src="img/osen/5.jpg" />
+					</div>
+				</div>
+				<div class="col-6 tst-col-head">
+					<div>
+                    <img src="img/banner.jpg" />
+					</div>
+				</div>
+				<div class="col-3 tst-col-head">
+					<div>
+                    <img src="img/osen/4.jpg" />
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="leftcol">
+		</div>
+		<div class="topblock col-7 offset-2">
+                <h1>Контакты</h1>
+                <h3>Наши контакты</h3> 
+        </div>
+        <div class="main row col-12">
+			<div class="breadcrumbs"><h3>Контакты >></h3>
+			</div>
                         <div class="mainblock">
                         <form action="#" method="post">
                 <fieldset>
@@ -57,10 +81,28 @@
                 </fieldset>
                     </div>
                     </div>
-            <div id="rightcol">
-            </div>
-            <div id="footer">
-            </div>
+		<div class="rightcol">
 		</div>
-	</body>
+		<div class="footer col-12">
+        	<div class="row">
+				<div class="col-3 tst-col-foot">
+					<div><h3>Заголовок</h3>Пришла осень. С каждым днем становится холоднее. Солнце светит, но не греет. За день земля не успевает нагреваться.
+					</div>
+				</div>
+				<div class="col-3 tst-col-foot">
+					<div><h3>Заголовок</h3>Листья на деревьях желтеют и опадают. Вся земля усыпана опавшими листьями. Редеют верхушки деревьев. Не слышно пения птиц.
+					</div>
+				</div>
+				<div class="col-3 tst-col-foot">
+					<div><h3>Заголовок</h3>Небо часто покрывается темными тучами. Идут холодные косые дожди. Дует резкий, пронизывающий ветер. Собран урожай в садах и огородах.
+					</div>
+				</div>
+                <div class="col-3 tst-col-foot">
+					<div><h3>Заголовок</h3>На полях пусто. Только кое-где зеленеют всходы озимины. Все напоминает о том, что пришла осень.
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
