--- a/limtu/catalog.html
+++ b/limtu/catalog.html
@@ -57,10 +57,10 @@
                 <div class="mainblock">
                         <table class="cells">
                         <tr><th>Артикул</th><th>Фото</th><th>Название товара</th><th>Цена</th><th>Количество</th></tr>
-                        <tr><td>1</td><td><a href="#"><img alt="револьвер" src="img/10914_big.jpg" width="100px" /></a></td><td>товар 1</td><td>100</td><td>23</td></tr>
-                        <tr><td>2</td><td><a href="#"><img alt="револьвер" src="img/10914_big.jpg" width="100px" /></a></td><td>товар 2</td><td>124</td><td>13</td></tr>
-                        <tr><td>3</td><td><a href="#"><img alt="револьвер" src="img/10914_big.jpg" width="100px" /></a></td><td>товар 3</td><td>50</td><td>45</td></tr>
-                        <tr><td>4</td><td><a href="#"><img alt="револьвер" src="img/10914_big.jpg" width="100px" /></a></td><td>товар 4</td><td>88</td><td>6</td></tr>
+                        <tr><td>1</td><td><a href="#"><img alt="револьвер" src="img/product/0_1813a6_b4cfa33a_orig.png" width="100px" /></a></td><td>товар 1</td><td>100</td><td>230р</td></tr>
+                        <tr><td>2</td><td><a href="#"><img alt="револьвер" src="img/product/klen11.png" width="100px" /></a></td><td>товар 2</td><td>124</td><td>130р</td></tr>
+                        <tr><td>3</td><td><a href="#"><img alt="револьвер" src="img/product/4579695-thumb.png" width="100px" /></a></td><td>товар 3</td><td>50</td><td>450р</td></tr>
+                        <tr><td>4</td><td><a href="#"><img alt="револьвер" src="img/product/autumn_leaves_PNG3603.png" width="100px" /></a></td><td>товар 4</td><td>88</td><td>6000р</td></tr>
                         </table>
                 </div>
 		</div>
