--- a/limtu/account.html
+++ b/limtu/account.html
@@ -20,11 +20,11 @@
 		</div>
 		<div class="menu col-12 row">
             <ul class="col-6 offset-3 ">
-            	<li><a href="/">Главная</a></li>
-               <li><a href="catalog.html">Каталог</a></li>
+            	<li><a href="index.html">Главная</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
-                <li><a href="styles.html">Стили</a></li>
-                <li><a href="forms.html">Формы</a></li>
+                <li><a href="flex.html">Flex</a></li>
+                <li><a href="bootstrap.html">Bootstrap</a></li>
             </ul>
 		</div>
 		<div class="header col-12 row">
@@ -53,8 +53,22 @@
                 <h3>После отправки проверьте почтовый ящик</h3> 
         </div>
         <div class="main row col-12">
-			<div class="breadcrumbs"><h3>Регистрация >></h3>
+			<div class="breadcrumbs"><h3>Главная >> Регистрация</h3>
 			</div>
+       	<div class="tab-content">
+  <div id="home" class="tab-pane fade in active">
+    <h3>HOME</h3>
+    <p>Some content.</p>
+  </div>
+  <div id="menu1" class="tab-pane fade">
+    <h3>Menu 1</h3>
+    <p>Some content in menu 1.</p>
+  </div>
+  <div id="menu2" class="tab-pane fade">
+    <h3>Menu 2</h3>
+    <p>Some content in menu 2.</p>
+  </div>
+</div>
         	<div class="mainblock">
                  	<div class="reg-form">
                         <form action="#" method="post">
