--- a/limtu/index.html
+++ b/limtu/index.html
@@ -20,11 +20,11 @@
 		</div>
 		<div class="menu col-12 row">
             <ul class="col-6 offset-3 ">
-            	<li><a href="/">Главная</a></li>
+            	<li><a href="index.html">Главная</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
-                <li><a href="styles.html">Стили</a></li>
-                <li><a href="forms.html">Формы</a></li>
+                <li><a href="flex.html">Flex</a></li>
+                <li><a href="bootstrap.html">Bootstrap</a></li>
             </ul>
 		</div>
 		<div class="header col-12 row">
