--- a/bootstrap/bootstrap.html
+++ b/bootstrap/bootstrap.html
@@ -68,7 +68,7 @@
                         <li class=""><a href="#table5" data-toggle="tab"> Text</a></li>
                     </ul>
                 <div class="tab-content">
-                    <div class="tab-pane fade active in" id="table1">
+                    <div class="tab-pane active" id="table1">
                         <table class="table">
                             <tr>
                                 <th>Артикул</th>
