--- a/limtu/account.html
+++ b/limtu/account.html
@@ -27,8 +27,8 @@
                 <li><a href="bootstrap.html">Bootstrap</a></li>
             </ul>
 		</div>
-		<div class="header col-12 row">
-        	<div class="row">
+		<div class="header row">
+        	<div class="col-12">
 				<div class="col-3 tst-col-head">
 					<div>
                     <img src="img/osen/5.jpg" />
