--- a/limtu/index.html
+++ b/limtu/index.html
@@ -8,38 +8,38 @@
 <body>
 	<div class="container">
 		<div class="topline row">
-        <div class="logo col-2">
+        <div class="logo col-3">
         <a href="/">Online-List.ru</a>
         </div>
-			<div class="register col-1 offset-6">
-			<a href="account.html">Вход</a> | <a href="account.html">Регистрация</a>
-            </div>
             <div class="search_form">
 			<input id="search" type="search"  placeholder="введите слова для поиска" />
 			</div>
+            <div class="register">
+			<span class="min-nodysplay"><a href="account.html">Вход</a> |</span> <a href="account.html">Регистрация</a>
+            </div>
 		</div>
 		<div class="menu col-12 row">
-            <ul class="col-6 offset-3 ">
+            <ul>
             	<li><a href="index.html">Главная</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
-                <li><a href="flex.html">Flex</a></li>
-                <li><a href="bootstrap.html">Bootstrap</a></li>
+                <li class="nodisplay min-nodysplay"><a href="flex.html">Flex</a></li>
+                <li class="nodisplay min-nodysplay"><a href="bootstrap.html">Bootstrap</a></li>
             </ul>
 		</div>
-		<div class="header col-12 row">
-        	<div class="row">
-				<div class="col-3 tst-col-head">
+		<div class="header row">
+        	<div class="col-12">
+				<div class="col-3 col-mn-3 tst-col-head min-nodysplay ">
 					<div>
                     <img src="img/osen/5.jpg" />
 					</div>
 				</div>
-				<div class="col-6 tst-col-head">
+				<div class="col-6 col-mn-6 tst-col-head">
 					<div>
                     <img src="img/banner.jpg" />
 					</div>
 				</div>
-				<div class="col-3 tst-col-head">
+				<div class="col-3 col-mn-3 tst-col-head nodisplay">
 					<div>
                     <img src="img/osen/4.jpg" />
 					</div>
@@ -48,22 +48,22 @@
 		</div>
 		<div class="leftcol">
 		</div>
-		<div class="topblock col-7 offset-2">
-				<h1>Приветствуем в нашем интернет-магазине осенних листьев!</h1>
+		<div class="topblock">
+				<h2>Приветствуем в нашем интернет-магазине осенних листьев!</h2>
 		</div>
 		<div class="main row col-12">
 			<div class="breadcrumbs"><h3>Главная >></h3>
 			</div>
 			<div class="row">
-				<div class="col-4 tst-col-main">
+				<div class="col-4 col-mn-4 tst-col-main min-nodysplay ">
 					<div><img src="img/osen/2.jpg" />
 					</div>
 				</div>
-				<div class="col-4 tst-col-main">
+				<div class="col-4 col-mn-4 tst-col-main">
 					<div><img src="img/osen/3.jpg" />
 					</div>
 				</div>
-				<div class="col-4 tst-col-main">
+				<div class="col-4 col-mn-4 tst-col-main nodisplay">
 					<div><img src="img/osen/1.jpg" />
 					</div>
 				</div>
@@ -72,20 +72,20 @@
 		<div class="rightcol">
 		</div>
 		<div class="footer col-12">
-        	<div class="row">
-				<div class="col-3 tst-col-foot">
+        	<div class="row ">
+				<div class="col-3 col-mn-3 tst-col-foot min-nodysplay">
 					<div><h3>Заголовок</h3>Пришла осень. С каждым днем становится холоднее. Солнце светит, но не греет. За день земля не успевает нагреваться.
 					</div>
 				</div>
-				<div class="col-3 tst-col-foot">
+				<div class="col-3 col-mn-3 tst-col-foot">
 					<div><h3>Заголовок</h3>Листья на деревьях желтеют и опадают. Вся земля усыпана опавшими листьями. Редеют верхушки деревьев. Не слышно пения птиц.
 					</div>
 				</div>
-				<div class="col-3 tst-col-foot">
+				<div class="col-3 col-mn-3 tst-col-foot">
 					<div><h3>Заголовок</h3>Небо часто покрывается темными тучами. Идут холодные косые дожди. Дует резкий, пронизывающий ветер. Собран урожай в садах и огородах.
 					</div>
 				</div>
-                <div class="col-3 tst-col-foot">
+                <div class="col-3 col-mn-3 tst-col-foot nodisplay">
 					<div><h3>Заголовок</h3>На полях пусто. Только кое-где зеленеют всходы озимины. Все напоминает о том, что пришла осень.
 					</div>
 				</div>
