--- a/bootstrap/bootstrap.html
+++ b/bootstrap/bootstrap.html
@@ -32,8 +32,8 @@
                 <li><a href="bootstrap.html">Bootstrap</a></li>
             </ul>
 		</div>
-		<div class="header col-12 row">
-        	<div class="row">
+		<div class="header row">
+        	<div class="col-12">
 				<div class="col-3 tst-col-head">
 					<div>
                     <img src="img/osen/5.jpg" />
@@ -67,8 +67,9 @@
                         <li class=""><a href="#table4" data-toggle="tab"> table-hover</a></li>
                         <li class=""><a href="#table5" data-toggle="tab"> Text</a></li>
                     </ul>
+                    <!--table-condensed div class="table-responsive"-->
                 <div class="tab-content">
-                    <div class="tab-pane active" id="table1">
+                    <div class="tab-pane fade in active" id="table1">
                         <table class="table">
                             <tr>
                                 <th>Артикул</th>
