--- a/limtu/index.html
+++ b/limtu/index.html
@@ -23,8 +23,8 @@
             	<li><a href="index.html">Главная</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
-                <li class="nodisplay min-nodysplay"><a href="flex.html">Flex</a></li>
-                <li class="nodisplay min-nodysplay"><a href="bootstrap.html">Bootstrap</a></li>
+                <li><a href="flex.html">Flex</a></li>
+                <li><a href="bootstrap.html">Bootstrap</a></li>
             </ul>
 		</div>
 		<div class="header row">
