--- a/limtu/account.html
+++ b/limtu/account.html
@@ -2,24 +2,25 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/forms.css">
 	<meta charset="utf-8" />
 	<title>Регистрация</title>
 </head>
 <body>
 	<div class="container">
 		<div class="topline row">
-        <div class="logo col-2">
-        <a href="/">Online-List.ru</a>
-        </div>
-			<div class="register col-1 offset-6">
-			<a href="account.html">Вход</a> | <a href="account.html">Регистрация</a>
+            <div class="logo col-3">
+            <a href="/">Online-List.ru</a>
             </div>
             <div class="search_form">
 			<input id="search" type="search"  placeholder="введите слова для поиска" />
 			</div>
+            <div class="register">
+			<span class="min-nodysplay"><a href="account.html">Вход</a> |</span> <a href="account.html">Регистрация</a>
+            </div>
 		</div>
 		<div class="menu col-12 row">
-            <ul class="col-6 offset-3 ">
+            <ul>
             	<li><a href="index.html">Главная</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
@@ -29,17 +30,17 @@
 		</div>
 		<div class="header row">
         	<div class="col-12">
-				<div class="col-3 tst-col-head">
+				<div class="col-3 col-mn-3 tst-col-head min-nodysplay ">
 					<div>
                     <img src="img/osen/5.jpg" />
 					</div>
 				</div>
-				<div class="col-6 tst-col-head">
+				<div class="col-6 col-mn-6 tst-col-head">
 					<div>
                     <img src="img/banner.jpg" />
 					</div>
 				</div>
-				<div class="col-3 tst-col-head">
+				<div class="col-3 col-mn-3 tst-col-head nodisplay">
 					<div>
                     <img src="img/osen/4.jpg" />
 					</div>
@@ -48,27 +49,12 @@
 		</div>
 		<div class="leftcol">
 		</div>
-		<div class="topblock col-7 offset-2">
-                <h1>Регистрация нового покупателя</h1>
-                <h3>После отправки проверьте почтовый ящик</h3> 
+		<div class="topblock">
+                <h2>Регистрация нового покупателя</h2>
         </div>
         <div class="main row col-12">
 			<div class="breadcrumbs"><h3>Главная >> Регистрация</h3>
 			</div>
-       	<div class="tab-content">
-  <div id="home" class="tab-pane fade in active">
-    <h3>HOME</h3>
-    <p>Some content.</p>
-  </div>
-  <div id="menu1" class="tab-pane fade">
-    <h3>Menu 1</h3>
-    <p>Some content in menu 1.</p>
-  </div>
-  <div id="menu2" class="tab-pane fade">
-    <h3>Menu 2</h3>
-    <p>Some content in menu 2.</p>
-  </div>
-</div>
         	<div class="mainblock">
                  	<div class="reg-form">
                         <form action="#" method="post">
@@ -92,25 +78,24 @@
                         </fieldset>
                         </form>
                     </div>
-                </div>
-    		</div>
+                 </div>
 		<div class="rightcol">
 		</div>
 		<div class="footer col-12">
-        	<div class="row">
-				<div class="col-3 tst-col-foot">
+        	<div class="row ">
+				<div class="col-3 col-mn-3 tst-col-foot min-nodysplay">
 					<div><h3>Заголовок</h3>Пришла осень. С каждым днем становится холоднее. Солнце светит, но не греет. За день земля не успевает нагреваться.
 					</div>
 				</div>
-				<div class="col-3 tst-col-foot">
+				<div class="col-3 col-mn-3 tst-col-foot">
 					<div><h3>Заголовок</h3>Листья на деревьях желтеют и опадают. Вся земля усыпана опавшими листьями. Редеют верхушки деревьев. Не слышно пения птиц.
 					</div>
 				</div>
-				<div class="col-3 tst-col-foot">
+				<div class="col-3 col-mn-3 tst-col-foot">
 					<div><h3>Заголовок</h3>Небо часто покрывается темными тучами. Идут холодные косые дожди. Дует резкий, пронизывающий ветер. Собран урожай в садах и огородах.
 					</div>
 				</div>
-                <div class="col-3 tst-col-foot">
+                <div class="col-3 col-mn-3 tst-col-foot nodisplay">
 					<div><h3>Заголовок</h3>На полях пусто. Только кое-где зеленеют всходы озимины. Все напоминает о том, что пришла осень.
 					</div>
 				</div>
