--- a/limtu/contacts.html
+++ b/limtu/contacts.html
@@ -2,25 +2,25 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/forms.css">
 	<meta charset="utf-8" />
 	<title>Контакты</title>
 </head>
 <body>
 	<div class="container">
 		<div class="topline row">
-        <div class="logo col-2">
-			<a href="/">Online-List.ru </a>
-        </div>
-			<div class="register col-1 offset-6">
-			<a href="account.html">Вход</a> | 
-           <a ref="account.html">Регистрация</a>
+            <div class="logo col-3">
+            <a href="/">Online-List.ru</a>
             </div>
             <div class="search_form">
 			<input id="search" type="search"  placeholder="введите слова для поиска" />
 			</div>
+            <div class="register">
+			<span class="min-nodysplay"><a href="account.html">Вход</a> |</span> <a href="account.html">Регистрация</a>
+            </div>
 		</div>
 		<div class="menu col-12 row">
-            <ul class="col-6 offset-3 ">
+             <ul>
             	<li><a href="index.html">Главная</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
@@ -30,17 +30,17 @@
 		</div>
 		<div class="header row">
         	<div class="col-12">
-				<div class="col-3 tst-col-head">
+				<div class="col-3 col-mn-3 tst-col-head min-nodysplay ">
 					<div>
                     <img src="img/osen/5.jpg" />
 					</div>
 				</div>
-				<div class="col-6 tst-col-head">
+				<div class="col-6 col-mn-6 tst-col-head">
 					<div>
                     <img src="img/banner.jpg" />
 					</div>
 				</div>
-				<div class="col-3 tst-col-head">
+				<div class="col-3 col-mn-3 tst-col-head nodisplay">
 					<div>
                     <img src="img/osen/4.jpg" />
 					</div>
@@ -49,23 +49,19 @@
 		</div>
 		<div class="leftcol">
 		</div>
-		<div class="topblock col-7 offset-2">
-                <h1>Контакты</h1>
-                <h3>Наши контакты</h3> 
+		<div class="topblock">
+                <h>Контакты</h2>
         </div>
         <div class="main row col-12">
 			<div class="breadcrumbs"><h3>Главная >> Контакты</h3>
 			</div>
-                        <div class="mainblock">
+                        <div class="mainblock reg-form">
                         <form action="#" method="post">
                 <fieldset>
-                    <legend>Форма для связи</legend>
                     <div>
-                    <label for="text_field">Имя: </label>
                     <input id="text_field" type="text"  placeholder="введите имя" required />
                     </div><br />
                     <div>
-                    <label for="email">Email: </label>
                     <input id="email" type="text"  placeholder="введите email" required />
                     </div><br />
                     <div>
@@ -73,8 +69,7 @@
                     <input id="url" type="url"  placeholder="введите ссылку" />
                     </div><br />
                     <div>
-                    <label for="text_area">Сообщение: </label>
-                    <textarea rows="5" id="text_area"  placeholder="Комментарий" /></textarea>
+                    <textarea rows="10" id="text_area"  placeholder="Напишите ваш комментарий" /></textarea>
                     </div><br />
                     <div>
                     <input type="submit" id="submit" />
@@ -84,20 +79,20 @@
 		<div class="rightcol">
 		</div>
 		<div class="footer col-12">
-        	<div class="row">
-				<div class="col-3 tst-col-foot">
+        	<div class="row ">
+				<div class="col-3 col-mn-3 tst-col-foot min-nodysplay">
 					<div><h3>Заголовок</h3>Пришла осень. С каждым днем становится холоднее. Солнце светит, но не греет. За день земля не успевает нагреваться.
 					</div>
 				</div>
-				<div class="col-3 tst-col-foot">
+				<div class="col-3 col-mn-3 tst-col-foot">
 					<div><h3>Заголовок</h3>Листья на деревьях желтеют и опадают. Вся земля усыпана опавшими листьями. Редеют верхушки деревьев. Не слышно пения птиц.
 					</div>
 				</div>
-				<div class="col-3 tst-col-foot">
+				<div class="col-3 col-mn-3 tst-col-foot">
 					<div><h3>Заголовок</h3>Небо часто покрывается темными тучами. Идут холодные косые дожди. Дует резкий, пронизывающий ветер. Собран урожай в садах и огородах.
 					</div>
 				</div>
-                <div class="col-3 tst-col-foot">
+                <div class="col-3 col-mn-3 tst-col-foot nodisplay">
 					<div><h3>Заголовок</h3>На полях пусто. Только кое-где зеленеют всходы озимины. Все напоминает о том, что пришла осень.
 					</div>
 				</div>
