--- a/limtu/index.html
+++ b/limtu/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0">
 	<meta charset="utf-8" />
 	<title>Главная страница</title>
 </head>
